--- a/quiz_game.html
+++ b/quiz_game.html
@@ -11,7 +11,7 @@
             <br>
             <br>
             <div class="col-lg-4 col-sm-8 col-xs-11 login_1">
-                <h3>Player 1 Login for the game</h3>
+                <h3>Player 1 Login for the quiz</h3>
                 <label>Username: </label>
                 <br>
                 <br>
@@ -23,7 +23,7 @@
             <br>
             <br>
             <div class="col-lg-4 col-sm-8 col-xs-11 login_2">
-                <h3>Player 2 Login for the game</h3>
+                <h3>Player 2 Login for the quiz</h3>
                 <label>Username: </label>
                 <br>
                 <br>
